templates/kubernetes-policy-controller_template.yaml
---
# Source: kubernetes-policy-controller/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubernetes-policy-controller
  namespace: default
  labels:
    app.kubernetes.io/name: kubernetes-policy-controller
    helm.sh/chart: kubernetes-policy-controller-0.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:  
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  selector:
    app.kubernetes.io/name: kubernetes-policy-controller
    app.kubernetes.io/instance: release-name
---
# Source: kubernetes-policy-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubernetes-policy-controller
  namespace: default
  labels:
    app.kubernetes.io/name: kubernetes-policy-controller
    helm.sh/chart: kubernetes-policy-controller-0.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-policy-controller
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-policy-controller
        app.kubernetes.io/instance: release-name
      annotations:
        checksum/config: dfa130fbed3ae84ffe5417fe4429a6fe62da403492aa6de91ca2f8f4ccdc91ed
    spec:
      containers:
        # WARNING: OPA is NOT running with an authorization policy configured. This
        # means that clients can read and write policies in OPA. If you are
        # deploying OPA in an insecure environment, be sure to configure
        # authentication and authorization on the daemon. See the Security page for
        # details: https://www.openpolicyagent.org/docs/security.html.
        - name: opa
          image: "openpolicyagent/opa:0.10.1"
          imagePullPolicy: IfNotPresent
          args:
            - "run"
            - "--server"
            - "--addr=http://127.0.0.1:8181"
        - name: kube-mgmt
          image: "openpolicyagent/kube-mgmt:0.6"
          imagePullPolicy: IfNotPresent
          args:
            - "--replicate-cluster=v1/namespaces"
            - "--replicate=extensions/v1beta1/ingresses"
            - "--replicate=v1/pods"
        - name: kubernetes-policy-controller          
          image: "nikhilbh/kubernetes-policy-controller:1.2"
          imagePullPolicy: IfNotPresent
          args:
            - "--addr=0.0.0.0:443"
            - "--addr=http://127.0.0.1:7925"
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: opa-server
          resources:
            {}
      volumes:
        - name: opa-server
          secret:
            secretName: release-name-kubernetes-policy-controller-cert
---
# Source: kubernetes-policy-controller/templates/webhookconfiguration.yaml
# this file contains 2 resources because both need the generated cert
# please don't split the resources
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: release-name-kubernetes-policy-controller  
  labels:
    app.kubernetes.io/name: kubernetes-policy-controller
    helm.sh/chart: kubernetes-policy-controller-0.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: mutating.webhook.kubernetes-policy-controller
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        opa-mutation: enabled
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - CREATE
        - UPDATE
        resources:
        - '*'
    clientConfig:

      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJakNDQWdxZ0F3SUJBZ0lSQUo1RnBDMDNTU3F1Y0VMLytkdkdlNjR3RFFZSktvWklodmNOQVFFTEJRQXcKR3pFWk1CY0dBMVVFQXhNUWIzQmhMV0ZrYldsemMybHZiaTFqWVRBZUZ3MHlOREExTVRVd09UQTBNelJhRncwegpOREExTVRNd09UQTBNelJhTUJzeEdUQVhCZ05WQkFNVEVHOXdZUzFoWkcxcGMzTnBiMjR0WTJFd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEaVhRTGk2TE41RzB4RXB6VDhzdGRsV3VuZlRhdFIKTm9sdWY1bytPeU80MWRLM0plR2dYQU55ZzZFcjQ5Y1prUzFxSFk2YVN4UU5RbEpSemlVbEk2WXZTWlljd0pIWAozUDBBSTR5S0xr [...]

      service:
        name: release-name-kubernetes-policy-controller
        namespace: default
        path: "/v1/admit"
